--- a/TODOs.org
+++ b/TODOs.org
@@ -30,4 +30,5 @@ how about modify the dom directly
 walk this dom and if it's an a tag, replace it* dom is just a tree 
 * DONE manipulate dom all in one
 to drop the insert example org
-* TODO print 3 answers and scores
+* DONE print 3 answers and scores
+* DONE show only first answer, collapse other
