--- a/README.org
+++ b/README.org
@@ -25,10 +25,11 @@ features such as code only view or code completion are provided.
 User must have ~org-mode~ 9.2 or later installed also.
 
 * Commands
-- ~howdoyou-query:~             prompt for query and do search
-- ~howdoyou-next-query:~        go to next link
-- ~howdoyou-previous-query:~    go to previous link
-
+- ~howdoyou-query:~                 prompt for query and do search
+- ~howdoyou-next-query:~            go to next link
+- ~howdoyou-previous-query:~        go to previous link
+- ~howdoyou-go-back-to-first-link:~ go back to first link
+- ~howdoyou-reload-link:~           reload link
 * Customization
 - ~howdoyou-use-curl:~          default is true if curl is available
 - ~howdoyou-number-of-answers:~ maximal number of answers to show, default is 3
