Update Commands section in README to actual commands

--- a/README.org
+++ b/README.org
@@ -38,8 +38,8 @@ User must have ~org-mode~ 9.2 or later installed also.
 
 * Commands
 - ~howdoyou-query:~                 prompt for query and do search
-- ~howdoyou-next-query:~            go to next link
-- ~howdoyou-previous-query:~        go to previous link
+- ~howdoyou-next-link:~             go to next link
+- ~howdoyou-previous-link:~         go to previous link
 - ~howdoyou-go-back-to-first-link:~ go back to first link
 - ~howdoyou-reload-link:~           reload link
 * Customization
