--- a/TODOs.org
+++ b/TODOs.org
@@ -273,4 +273,5 @@ This is wrong.
 
 * DONE render strikethrough
 * DONE hide org makers
-* option to select answer buffer
+* DONE option to select answer buffer
+~howdoyou-switch-to-answer-buffer~
