--- a/TODOs.org
+++ b/TODOs.org
@@ -275,3 +275,11 @@ This is wrong.
 * DONE hide org makers
 * DONE option to select answer buffer
 ~howdoyou-switch-to-answer-buffer~
+* TODO local buffer functions
+minor-mode to manage state?
+layers/+spacemacs/spacemacs-org/local/space-doc/space-doc.el
+how spacemacs deals with readme, when the file path match the patterns
+it runs spacemacs/prettify-org-buffer at core/core-funcs.el
+
+current dead simple: use major-mode == 'org-mode as flag
+https://stackoverflow.com/questions/8008211/buffer-local-function-in-elisp
