--- a/TODOs.org
+++ b/TODOs.org
@@ -286,3 +286,7 @@ it runs spacemacs/prettify-org-buffer at core/core-funcs.el
 
 current dead simple: use major-mode == 'org-mode as flag
 https://stackoverflow.com/questions/8008211/buffer-local-function-in-elisp
+* TODO show time and username
+* DONE history
+CLOSED: [2019-11-14 Thu 00:10]
+* TODO buttons to delete history item and delete all
