Inform about 3rd party depends of counsel example
As opposite to helm-google-suggest, counsel-web-suggest isn't
official part of abo-abo's ivy/counsel and needs to be installed
and configured separately.

--- a/README.org
+++ b/README.org
@@ -57,6 +57,8 @@ Now =helm-google-suggest= will pass suggestion to howdoyou-query as default
 action.
 
 * Use with counsel-web-suggest
+Requires installed and configured [[https://github.com/mnewt/counsel-web][counsel-web-suggest]]
+
 add this function definition to your config file
 #+begin_src elisp
   (defun my/howdoyou-with-suggestions ()
