correct package name

--- a/README.org
+++ b/README.org
@@ -57,7 +57,7 @@ Now =helm-google-suggest= will pass suggestion to howdoyou-query as default
 action.
 
 * Use with counsel-web-suggest
-Requires installed and configured [[https://github.com/mnewt/counsel-web][counsel-web-suggest]]
+Requires installed and configured 3rd party package [[https://github.com/mnewt/counsel-web][counsel-web]].
 
 add this function definition to your config file
 #+begin_src elisp
